<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/menu_movies" />

    <item
        android:id="@+id/navigation_tv_shows"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/menu_tv_shows" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/menu_favorites" />
</menu>